--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.0"
 services:
   mysqlbta:
     build:
-      context: db
+      context: backend/db
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
