--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,30 @@
 version: "3.0"
 services:
-  mysqlbta:
+  btadb:
     build:
       context: backend/db
       dockerfile: Dockerfile
     ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=docker
+      - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=buscatuarepa
+    restart: always
+  apibta:
+    build:
+      context: backend/api
+      dockerfile: Dockerfile
+    ports:
       - "8080:8080"
     environment:
-      - MYSQL_USER=docker
-      - MYSQL_ROOT_PASSWORD=docker
-      - MYSQL_DATABASE=buscatuarepa
+      - DATASOURCE_USERNAME=docker
+      - DATASOURCE_PASSWORD=docker
+      - DATASOURCE_IP=btadb
+      - DATASOURCE_PORT=5432
+      - DATASOURCE_DATABASE=buscatuarepa
+    depends_on:
+      - "btadb"
     restart: on-failure
   webappbta:
     build:
@@ -18,5 +33,5 @@ services:
     ports:
       - "8181:80"
     depends_on:
-      - "mysqlbta"
+      - "apibta"
     restart: on-failure
