--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/buscatuarepa
-spring.datasource.username=docker
-spring.datasource.password=docker
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=jdbc:postgresql://${DATASOURCE_IP:btadb}:${DATASOURCE_PORT:5432}/${DATASOURCE_DATABASE:buscatuarepa}
+spring.datasource.username=${DATASOURCE_USERNAME:docker}
+spring.datasource.password=${DATASOURCE_PASSWORD:docker}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
