--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
-version: "3.0"
+version: "3.7"
 services:
   btadb:
     build:
       context: backend/db
       dockerfile: Dockerfile
+    networks:
+      - backend
     ports:
       - "5432:5432"
     environment:
@@ -15,6 +17,9 @@ services:
     build:
       context: backend/api
       dockerfile: Dockerfile
+    networks:
+      - backend
+      - frontend
     ports:
       - "8080:8080"
     environment:
@@ -24,14 +29,20 @@ services:
       - DATASOURCE_PORT=5432
       - DATASOURCE_DATABASE=buscatuarepa
     depends_on:
-      - "btadb"
+      - btadb
     restart: on-failure
   webappbta:
     build:
       context: frontend
       dockerfile: Dockerfile
+    networks:
+      - frontend
     ports:
       - "8181:80"
     depends_on:
-      - "apibta"
+      - btadb
+      - apibta
     restart: on-failure
+networks:
+  backend: {}
+  frontend: {}
